fix footer on mobile platforms

--- a/app/static/css/text.css
+++ b/app/static/css/text.css
@@ -17,5 +17,10 @@
 }
 
 .content {
-    height: 100%;
+    /*height:100%*/
+}
+
+.footer {
+    /*left: 0;
+    bottom: 0;*/
 }
